Closed Bug 80544 Opened 24 years ago Closed 24 years ago

Following links with empty url parameter (like in ebay) causes helper to appear

Categories

(Core :: Networking: HTTP, defect)

x86
All
defect
Not set
major

Tracking

()

VERIFIED FIXED
mozilla0.9.1

People

(Reporter: marc.loiselle, Assigned: darin.moz)

References

()

Details

(Keywords: regression, top100)

Attachments

(2 files)

Mozilla should show the page but instead a helper dialog appears. The helper dialog does not even function properly. It seems to want to download ebayISAPI.dll but does not succeed. Ok on Buildid 2001051108. NOT ok on Buildid 2001051121. Probably related to the HTTP branch landing on 20010511.
Follow the "My Ebay" link on http://www.ebay.com/ to see the bug in action.
Actually it is not the dll in the link that is causing the problem, it is the lack of value for a parameter in the link. http://cgi3.ebay.com/aw-cgi/eBayISAPI.dll?MyEbayLogin= is ok (ebay generates input error page) but http://cgi3.ebay.com/aw-cgi/eBayISAPI.dll?MyEbayLogin is NOT (triggers helper dialog)
Summary: Following links with .dll in them causes helper to appear → Following links with empty url parameter causes helper to appear
I get exactly the same errors in JS console as in bug 80313. Confirming. 2001-05-12-08, Win NT. OS -> all.
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Linux → All
*** Bug 80437 has been marked as a duplicate of this bug. ***
In bug 80544 the reporter found out that this bug appeared between 2001-05-11-06 and 2001-05-11-09 (w2k).
*** Bug 80626 has been marked as a duplicate of this bug. ***
Adding keywords and CCs from bug 80626.
Severity: normal → major
Keywords: top100
*** Bug 80684 has been marked as a duplicate of this bug. ***
*** Bug 80758 has been marked as a duplicate of this bug. ***
related to necko rearch landing. Pre-branch landing builds do not show this.
Assignee: neeti → darin
this is basically a regression of 54381.
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9.1
with the second patch i was able to browse ebay again.
2nd patch looks good and correct. sr=mscott
fix checked in
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
*** Bug 80849 has been marked as a duplicate of this bug. ***
fyi, if you go to yahoo.com and click customize (my yahoo) you will see this behavior as well
For the record: http://cgi3.ebay.com/aw-cgi/eBayISAPI.dll?MyEbayLogin returns: HTTP/1.0 302 Object Moved Server: Microsoft-IIS/4.0 Date: Tue, 15 May 2001 22:43:07 GMT Location: http://cgi1.ebay.com/aw-cgi/eBayISAPI.dll?MyEbayLogin HTTP/1.0 200 OK Server: Microsoft-IIS/4.0 Date: Tue, 15 May 2001 22:43:07 GMT </body></html>
*** Bug 81008 has been marked as a duplicate of this bug. ***
*** Bug 81109 has been marked as a duplicate of this bug. ***
Wfm, 2001-05-16-04, Win NT.
Just type any bogus url, I'm typing "qwerty", hit return and wait while it crashes. I think the last check in for nsHttpChannel::GetContentType() causes the terrible bloat out of call stack, which looks like this: .... nsDocumentOpenInfo::OnStartRequest(nsDocumentOpenInfo * const 0x05362eb0, nsIRequest * 0x047f5e00, nsISupports * 0x00000000) line 219 + 16 bytes nsUnknownDecoder::FireListenerNotifications(nsIRequest * 0x047f5e00, nsISupports * 0x00000000) line 345 + 34 bytes nsUnknownDecoder::OnStopRequest(nsUnknownDecoder * const 0x05362d00, nsIRequest * 0x047f5e00, nsISupports * 0x00000000, unsigned int 2147500037) line 225 + 16 bytes nsDocumentOpenInfo::OnStopRequest(nsDocumentOpenInfo * const 0x05367b70, nsIRequest * 0x047f5e00, nsISupports * 0x00000000, unsigned int 2147500037) line 255 nsUnknownDecoder::OnStopRequest(nsUnknownDecoder * const 0x05366820, nsIRequest * 0x047f5e00, nsISupports * 0x00000000, unsigned int 2147500037) line 232 + 38 bytes nsDocumentOpenInfo::OnStopRequest(nsDocumentOpenInfo * const 0x0535e140, nsIRequest * 0x047f5e00, nsISupports * 0x00000000, unsigned int 2147500037) line 255 .....
*** Bug 80721 has been marked as a duplicate of this bug. ***
Depends on: 81008
Keywords: mostfreq
QA Contact: tever → benc
Summary: Following links with empty url parameter causes helper to appear → Following links with empty url parameter (like in ebay) causes helper to appear
qa to me. +mostfreq, changed summary so it reads in mostfreq query sensibly. There was another patch in 81008, but browsing is reported not cleaned up until bug 81273 was fixed, so you should try +5/18/2001.
I'm sure the patch http://bugzilla.mozilla.org/showattachment.cgi?attach_id=34877 ... + if (!mResponseHead) + return NS_ERROR_NOT_AVAILABLE; ... fixes the infinite recursion
Verified fixed.
Status: RESOLVED → VERIFIED
QA Contact: benc → junruh
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: