Fixes regression bug 80544 "can't browse ebay.com" sr=mscott